# Control_Cpp

./: .gitignore
lane_dectection_cpp/: CMakeLists.txt  Makefile  lane_detection  test
lane_dectection_cpp/beside_python/: stan_v1.py
lane_dectection_cpp/data/: cameraDistortion.txt  cameraMatrix.txt
lane_dectection_cpp/include/: controller.hpp  debug.hpp  image.hpp  imu.hpp  mpc.hpp  serial.hpp  share.hpp  socket.hpp  ultils.hpp  utils.hpp
lane_dectection_cpp/python/: stan_v1.py  stan_v2.py
lane_dectection_cpp/src/: casa.cpp  controller.cpp  image.cpp  imu.cpp  main.cpp  mpc.cpp  mpc_controller  serial.cpp  socket.cpp  test.cpp  test_casadi  test_video.cpp  utils.cpp
lane_dectection_cpp/test_file/: dongbo.cpp  mpc.cpp  se.cpp  socket.cpp  threadcity.cpp
